--- a/lib/index.html
+++ b/lib/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link href="./DiscordInvite.min.css" rel="stylesheet">
     <script src="./DiscordInvite.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!--
     -->
     <title>Test</title>
@@ -16,7 +17,7 @@
     </noscript>
     <div id="root"></div>    
     <script>
-      DiscordInvite.invite.render({id:'root', code:'guide'});
+      DiscordInvite.invite.render({id:'root', code:'discord-api'});
     </script>
   </body>
 </html>
